--- a/app/views/needs/_need_card.html.erb
+++ b/app/views/needs/_need_card.html.erb
@@ -29,7 +29,7 @@
         <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
         </svg>
-        <span><%= time_slot_label(need.time_slot) %></span>
+        <span><%= time_slot_label(need.time_slot, need.specific_time) %></span>
       </div>
     <% end %>
 
